# CppError

ErrorProvider/: CMakeLists.txt  main.cpp
ErrorProvider/Base/: CMakeLists.txt  ClassBase.cpp  ClassBase.hpp  ClassBaseContainer.cpp  ClassBaseContainer.hpp
ErrorProvider/Provider/: CMakeLists.txt  ClassBaseContainerIntercept.cpp  ClassBaseContainerProvider.cpp  ClassBaseIntercept.cpp  ClassBaseProvider.cpp  IClassBaseContainerService.hpp  IClassBaseService.hpp
ErrorProvider/Provider/ModuleServiceRegistry/: ModuleServiceRegistry.cpp  ModuleServiceRegistry.hpp
