cmake_minimum_required(VERSION 3.16)
project(ErrorProvider LANGUAGES CXX)
set(Root ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Root}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Root}/bin)
add_executable(${PROJECT_NAME} main.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ${Root})
target_link_libraries(${PROJECT_NAME} Provider Base)
add_subdirectory(${Root}/Base)
add_subdirectory(${Root}/Provider)